--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
 		"@nestjs/platform-express": "^6.10.14",
 		"reflect-metadata"        : "^0.1.13",
 		"rimraf"                  : "^3.0.0",
-		"rxjs"                    : "^6.5.4"
+		"rxjs"                    : "^6.5.4",
+		"mongoose"                : "^5.8.11",
+		"uuid"                    : "^3.4.0"
 	},
 	"devDependencies": {
 		"@nestjs/cli"                     : "^6.13.2",
@@ -48,7 +50,9 @@
 		"ts-node"                         : "^8.6.0",
 		"tsconfig-paths"                  : "^3.9.0",
 		"typescript"                      : "^3.7.4",
-		"@nestjs/microservices"           : "^6.11.5"
+		"@nestjs/microservices"           : "^6.11.5",
+		"@types/mongoose"                 : "^5.7.0",
+		"@types/uuid"                     : "^3.4.7"
 	},
 	"jest"           : {
 		"moduleFileExtensions": [
